--- a/gts-ui/src/main/webapp/VAADIN/themes/light/styles.css
+++ b/gts-ui/src/main/webapp/VAADIN/themes/light/styles.css
@@ -999,7 +999,7 @@
  */
 
 .v-vaadin-version:after {
-	content: "7.7.3";
+	content: "7.7.7";
 }
 
 .v-widget {
@@ -4262,6 +4262,8 @@ div.v-layout.v-horizontal.v-widget {
 }
 
 .light .v-grid-body {
+	-ms-touch-action: none;
+	touch-action: none;
 	z-index: 0;
 	top: 0;
 }
@@ -4540,6 +4542,21 @@ div.v-layout.v-horizontal.v-widget {
 	bottom: 0px;
 	cursor: col-resize;
 	z-index: 10;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
+.light .v-grid-column-resize-simple-indicator {
+	position: absolute;
+	width: 3px;
+	top: 0px;
+	left: 10.5px;
+	z-index: 9001;
+	background: #fff;
+	box-shadow: 0px 0px 5px #000;
 	-webkit-user-select: none;
 	-khtml-user-select: none;
 	-moz-user-select: none;
@@ -12961,7 +12978,7 @@ div.v-layout.v-horizontal.v-widget {
 	transition: all 300ms;
 }
 
-.light .valo-menu-responsive[width-range~="0-800px"] .valo-menu-visible .valo-menuitems {
+.light .valo-menu-responsive[width-range~="0-800px"] .valo-menu-visible .valo-menuitems, .light .valo-menu-responsive[width-range~="0-800px"] .valo-menu-hover:hover .valo-menuitems {
 	-webkit-transform: translatex(0%);
 	-moz-transform: translatex(0%);
 	-ms-transform: translatex(0%);
